--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ langchain-community==0.3.27
 langchain-core==0.3.70
 langchain-ollama==0.3.5
 langchain-openai==0.3.28
-langchain-tavily
+langchain-tavily==0.2.11
 langchain-text-splitters==0.3.8
 langchainhub==0.1.21
 langsmith==0.4.8
